# wheeldiff

./: MANIFEST.in  README.md  pyproject.toml  renovate.json  requirements.in  test-requirements-py310.txt  test-requirements-py311.txt  test-requirements-py38.txt  test-requirements-py39.txt  tox.ini
.github/workflows/: ci.yml  release.yml
src/wheeldiff/_impl/: __init__.py  cmd.py
tests/: test_import.py
